fixed overflowing nav

--- a/style.css
+++ b/style.css
@@ -46,13 +46,13 @@ nav {
 nav ul {
     display: flex;
     margin-left: auto;
-    width: 30%;
-    justify-content: space-between;
+    flex: 1 1 30%;
+    justify-content: flex-end;
 }
 
 nav ul li {
     position: relative;
-    margin: 0.3rem 0;
+    margin: 0 1rem;
     color: white;
     list-style-type: none;
     font-size: 1.2rem;
@@ -228,10 +228,10 @@ header .scroll::before {
     
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1280px) {
 
     header nav {
-        margin: 1.2rem;
+        padding: 0 1.2rem;
         /* margin-right: 1.2rem; */
     }
 
